--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,13 +1,3 @@
-# The behavior of RuboCop can be controlled via the .rubocop.yml
-# configuration file. It makes it possible to enable/disable
-# certain cops (checks) and to alter their behavior if they accept
-# any parameters. The file can be placed either in your home
-# directory or in some project directory.
-#
-# RuboCop will start looking for the configuration file in the directory
-# where the inspected file is and continue its way up to the root directory.
-#
-# See https://docs.rubocop.org/rubocop/configuration
 require:
   - rubocop-performance
   - rubocop-rspec
@@ -23,7 +13,8 @@ AllCops:
     - '*.gemspec'
     - 'spec/**/*'
     - 'vendor/**/*'
-    - 'scratch.rb'
+    - 'scratch*.rb'
+    - 'snippets*.rb'
 
 # Align the elements of a hash literal if they span more than one line.
 Layout/HashAlignment:
@@ -126,7 +117,7 @@ Layout/LineLength:
 # Avoid methods longer than 15 lines of code.
 Metrics/MethodLength:
   Max: 20
-  IgnoredMethods:
+  AllowedMethods:
     - swagger_path
     - operation
 
@@ -134,6 +125,9 @@ Metrics/MethodLength:
 # A complexity metric geared towards measuring complexity for a human reader.
 Metrics/PerceivedComplexity:
   Max: 10
+
+NestedGroups:
+  Max: 4
 
 # Naming/FileName:
 #  Exclude:
